--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,21 +1,12 @@
 platform :ios, '8.0'
 
-project 'NextGenDataManagerExample'
-workspace 'NextGenDataManagerExampleWorkspace'
+project 'CPEDataExample'
+workspace 'CPEDataExampleWorkspace'
 use_frameworks!
 
-target 'NextGenDataManagerExample' do
+target 'CPEDataExample' do
     
-    pod 'NextGenDataManager', :path => '../'
+    pod 'CPEData', :path => '../'
     pod 'RETableViewManager'
 
-end
-
-post_install do |installer|
-    installer.pods_project.targets.each do |target|
-        target.build_configurations.each do |config|
-            config.build_settings['ENABLE_BITCODE'] = 'NO'
-            config.build_settings['SWIFT_VERSION'] = '3.0'
-        end
-    end
 end
